--- a/css/.htaccess
+++ b/css/.htaccess
@@ -1,3 +1,3 @@
-AddHandler application/x-httpd-php .css
-php_value auto_prepend_file gzip-css.php
-php_flag zlib.output_compression On
+# AddHandler application/x-httpd-php .css
+# php_value auto_prepend_file gzip-css.php
+# php_flag zlib.output_compression On
